@@ -1,5 +1,6 @@
 iowow (1.4.6) UNRELEASED; urgency=medium
 
+  * Added single thread worker (iwstw.h)
   * Added `iwstree_clear()` (iwstree.h)
 
  -- Anton Adamansky <adamansky@gmail.com>  Thu, 18 Jun 2020 23:02:01 +0700
